egress-external-https-proxy-integration/wikipedia.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: egress-gateway-wikipedia
  namespace: istio-system
spec:
  workloadSelector:
    labels:
      app: istio-egressgateway
  configPatches:
  - applyTo: LISTENER
    match:
      context: ANY
      listener:
        name: "0.0.0.0_8443"
        portNumber: 8443
    patch:
      operation: ADD
      value:
        filters:
        - name: envoy.filters.network.tcp_proxy
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
            stat_prefix: "outbound|8443||www.wikipedia.org"
            cluster: external_proxy_cluster
            tunneling_config:
              hostname: www.wikipedia.org:443
        filter_chain_match:
          server_names:
          - "www.wikipedia.org"
